removing will-change as it is causing issues on firefox

--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -25,8 +25,7 @@
   display: flex;
   flex-direction: column;
 
-  will-change: filter, opacity;
-  transition: filter 200ms ease-in-out, opacity 200ms ease-in-out;
+  transition: filter 200ms ease-in-out, opacity 200ms ease-in-out; // for fading in after &--masked is removed
 
   &--body {
     background-color: transparent;
